main/default/objects/Survey__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines if a survey is active. Each event/session can only have one active survey at a time.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>