main/default/objects/Survey__c/fields/Campaign_1__c.field-meta.xml
<CustomField>
    <fullName>Campaign_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to Custom Campaign</description>
    <label>Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>