main/default/objects/Survey__c/fields/Campaign_Formula__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Formula__c</fullName>
    <formula>Campaign__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Formula</label>
    <type>Text</type>
</CustomField>