main/default/objects/Survey__c/fields/Campaign_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Logo_URL__c</fullName>
    <description>Source of client logo in surveys</description>
    <label>Campaign Logo URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>