main/default/objects/Survey__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <formula>Event__r.Campaign__r.Name</formula>
    <label>Campaign Name</label>
    <type>Text</type>
</CustomField>