main/default/objects/Survey__c/fields/Catchup__c.field-meta.xml
<CustomField>
    <fullName>Catchup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Survey Catch-Up is active</description>
    <label>Survey Catch-Up</label>
    <type>Checkbox</type>
</CustomField>