main/default/objects/Survey__c/fields/Catchup_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Catchup_End_Date__c</fullName>
    <description>Survey Catch-Up End Date</description>
    <label>Survey Catch-Up End Date</label>
    <type>DateTime</type>
</CustomField>