main/default/objects/Survey__c/fields/Catchup_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Catchup_Start_Date__c</fullName>
    <description>Survey Catch-Up Start date</description>
    <label>Survey Catch-Up Start Date</label>
    <type>DateTime</type>
</CustomField>