main/default/objects/Survey__c/fields/Compass_ID__c.field-meta.xml
<CustomField>
    <fullName>Compass_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compass ID</label>
    <referenceTo>Compass_Capture__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>