main/default/objects/Survey__c/fields/Date_Title__c.field-meta.xml
<CustomField>
    <fullName>Date_Title__c</fullName>
    <defaultValue>&quot;Date&quot;</defaultValue>
    <label>Date Title</label>
    <length>90</length>
    <type>Text</type>
</CustomField>