main/default/objects/Survey__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Survey description that will be displayed in the survey page</description>
    <label>Description</label>
    <length>80000</length>
    <type>Html</type>
</CustomField>