main/default/objects/Survey__c/fields/Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer__c</fullName>
    <label>Disclaimer</label>
    <length>80000</length>
    <type>Html</type>
</CustomField>