main/default/objects/Survey__c/fields/Email_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Email_Logo_URL__c</fullName>
    <description>Survey Email Logo URL</description>
    <label>Email Logo URL</label>
    <type>TextArea</type>
</CustomField>