main/default/objects/Survey__c/fields/Event_Email_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Email_Logo_URL__c</fullName>
    <formula>Event__r.Email_Logo_URL2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Email Logo URL</label>
    <type>Text</type>
</CustomField>