main/default/objects/Survey__c/fields/Journey__c.field-meta.xml
<CustomField>
    <fullName>Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to Journey</description>
    <label>Journey</label>
    <referenceTo>Journey__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>