main/default/objects/Survey__c/fields/Journey_Milestone_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Journey_Milestone_End_Date__c</fullName>
    <description>Sets the date until when the survey can be answered as a milestone in a user journey</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>