main/default/objects/Survey__c/fields/Journey_Milestone_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Journey_Milestone_Start_Date__c</fullName>
    <description>Sets the start date of when the survey can be answered as a milestone in a user journey</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>