main/default/objects/Survey__c/fields/Journey_Name__c.field-meta.xml
<CustomField>
    <fullName>Journey_Name__c</fullName>
    <formula>Journey__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journey Name</label>
    <type>Text</type>
</CustomField>