main/default/objects/Survey__c/fields/Logo_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Logo_Image_Id__c</fullName>
    <label>Logo Image Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>