main/default/objects/Survey__c/fields/Outreach_Notification__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the Outreach Notification</description>
    <label>Outreach Notification</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Outreach_Notification__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Outreach_Notification__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>