main/default/objects/Survey__c/fields/Site_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Site_Picklist_Values__c</fullName>
    <label>Site Picklist Values</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>