main/default/objects/Survey__c/fields/Site_Title__c.field-meta.xml
<CustomField>
    <fullName>Site_Title__c</fullName>
    <defaultValue>&quot;Site&quot;</defaultValue>
    <label>Site Title</label>
    <length>90</length>
    <type>Text</type>
</CustomField>