main/default/objects/Survey__c/fields/Survey_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Survey_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Surveys (Campaign)</relationshipLabel>
    <relationshipName>CampaignSurveys</relationshipName>
    <type>Lookup</type>
</CustomField>