main/default/objects/Survey__c/fields/Survey_Code__c.field-meta.xml
<CustomField>
    <fullName>Survey_Code__c</fullName>
    <description>Random code will be generated and will be the identifier for the survey</description>
    <label>Survey Code</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>