main/default/objects/Survey__c/fields/Survey_Fields_JSON__c.field-meta.xml
<CustomField>
    <fullName>Survey_Fields_JSON__c</fullName>
    <description>Contains the JSON string for the selected fields and if they are required, to be displayed in the survey</description>
    <label>Survey Fields JSON</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>