main/default/objects/Survey__c/fields/Survey_Id__c.field-meta.xml
<CustomField>
    <fullName>Survey_Id__c</fullName>
    <label>Survey Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>