main/default/objects/Survey__c/fields/Survey_Logo__c.field-meta.xml
<CustomField>
    <fullName>Survey_Logo__c</fullName>
    <formula>IF(ISBLANK( Survey_Logo_URL__c ) ,&apos;&apos;,  IMAGE( Survey_Logo_URL__c ,&apos;Survey Logo&apos;, 50 ,50))</formula>
    <label>Survey Logo</label>
    <type>Text</type>
</CustomField>