main/default/objects/Survey__c/fields/Survey_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_Logo_URL__c</fullName>
    <formula>IF( ISBLANK( Logo_Image_Id__c ),&apos;&apos;, &apos;/sfc/servlet.shepherd/version/download/&apos;+Logo_Image_Id__c)</formula>
    <label>Survey Logo URL</label>
    <type>Text</type>
</CustomField>