main/default/objects/Survey__c/fields/Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL__c</fullName>
    <description>Generates URL for stand-alone surveys</description>
    <inlineHelpText>Copy and paste the URL to distribute the survey</inlineHelpText>
    <label>Survey URL</label>
    <type>Url</type>
</CustomField>